try to fix alignment issue on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,6 @@ input {
 }
 
 #social-media-icon {
-    max-height: 30px;
+    height: 30px;
     padding: 0px 5px 0px 5px;
 }
